namespace java com.sankuai.meituan.finance.mis.web.clearing.vo

struct BuyPriceChangePoiVo {
    1: i32 poiId; // 门店ID
    2: double amount; // 门店调账金额
    3: string poiName; // 门店名称
}
